# escuela-alphacen-python

./: README.md
Day 1/: README.md  day1_tutorial_part2.ipynb  day1_tutorial_part_1.ipynb
Day 2/: Archivos_FITS.ipynb
Day 3/: Procesamiento de imagenes con Python.ipynb
Day 4/: Modulos y librerias.ipynb  README.md  Test install.ipynb  setup.cfg
Day 4/src/example_package/: example.py
