[metadata]
name = example-pkg-AQUI_VA_SU_USUARIO_O_NOMBRE
version = 0.0.2
author = SU NOMBRE
author_email = SU CORREO
description = Aqui va una pequeña descripción
long_description = file: README.md 
long_description_content_type = text/markdown
url = AQUI VA UN URL DE GITHUB SI TIENEN
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src